# Synaptogen

./: LICENSE  README.md
Synaptogen.jl/: .gitignore  Artifacts.toml  Project.toml  README.md
Synaptogen.jl/benchmark/: benchmarks.jl
Synaptogen.jl/src/: Synaptogen.jl  unvectorized.jl  vectorized.jl
Synaptogen.jl/test/: runtests.jl  visual_test.jl
Synaptogen.py/: README.md  pyproject.toml
Synaptogen.py/src/synaptogen/: __init__.py  default_params.json  synaptogen.py
Synaptogen.va/: README  README.md  Synaptogen.va
