[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synaptogen"
version = "0.2.0"
authors = [
  { name="Tyler Hennen", email="tyler@hennen.us" },
]
description = "A fast generative model for stochastic memory cells"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/thennen/Synaptogen.git/Synaptogen.py"
Issues = "https://github.com/thennen/Synaptogen/issues"